# OrcaSlicer

./: .doxygen  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_flatpak.sh  build_linux.sh  build_release_macos.sh  build_release_vs.bat  task.md
.github/workflows/: assign.yml  build_all.yml  build_check_cache.yml  build_deps.yml  build_orca.yml  check_locale.yml  check_profiles.yml  check_profiles_comment.yml  doxygen-docs.yml  shellcheck.yml  winget_updater.yml
cmake/modules/: FindGLEW.cmake
deps_src/: CMakeLists.txt
deps_src/imgui/: imconfig.h
deps_src/libigl/igl/: loop.cpp
deps_src/md4c/: CMakeLists.txt
deps_src/md4c/src/: CMakeLists.txt
deps_src/yyjson/: CMakeLists.txt
localization/i18n/: OrcaSlicer.pot  list.txt
localization/i18n/ca/: OrcaSlicer_ca.po
localization/i18n/cs/: OrcaSlicer_cs.po
localization/i18n/de/: OrcaSlicer_de.po
localization/i18n/en/: OrcaSlicer_en.po
localization/i18n/es/: OrcaSlicer_es.po
localization/i18n/fr/: OrcaSlicer_fr.po
localization/i18n/hu/: OrcaSlicer_hu.po
localization/i18n/it/: OrcaSlicer_it.po
localization/i18n/ja/: OrcaSlicer_ja.po
localization/i18n/ko/: OrcaSlicer_ko.po
localization/i18n/lt/: OrcaSlicer_lt.po
localization/i18n/nl/: OrcaSlicer_nl.po
resources/calib/vfa/: vfa.drc
resources/data/: hints.ini
resources/handy_models/: 3DBenchy.drc  OrcaToleranceTest.drc  Orca_stringhell.drc  Stanford_Bunny.drc  Voron_Design_Cube_v7.drc  calicat.drc  ksr_fdmtest_v4.drc
resources/profiles/: Afinia.json  Anker.json  Anycubic.json  Artillery.json  BBL.json  BIQU.json  Blocks.json  CONSTRUCT3D.json  Chuanying.json  Co Print.json  CoLiDo.json  Comgrow.json  Creality.json  Cubicon.json  Custom.json  DeltaMaker.json  Dremel.json  Elegoo.json  Eryone.json  FLSun.json  Flashforge.json  FlyingBear.json  Folgertech.json  Geeetech.json  Ginger Additive.json  InfiMech.json  Kingroon.json  LONGER.json  Lulzbot.json  M3D.json  MagicMaker.json  Mellow.json  OpenEYE.json  OrcaArena.json  OrcaFilamentLibrary.json  Peopoly.json  Phrozen.json  Positron3D.json  Prusa.json  Qidi.json  (+22 more)
scripts/: build_flatpak_with_docker.sh  test_moonraker_lane_data.py
scripts/flatpak/: .gitignore  entrypoint  io.github.orcaslicer.OrcaSlicer.yml  io.github.softfever.OrcaSlicer.metainfo.xml  io.github.softfever.OrcaSlicer.yml  setup_env_ubuntu24.04.sh
scripts/linux.d/: debian  gentoo
src/: CMakeLists.txt  OrcaSlicer.cpp  OrcaSlicer_app_msvc.cpp
src/dev-utils/: CMakeLists.txt  encoding-check.cpp
src/libslic3r/: AppConfig.cpp  AppConfig.hpp  Brim.cpp  CMakeLists.txt  Config.cpp  Config.hpp  FlushVolCalc.cpp  GCode.cpp  GCode.hpp  GCodeWriter.cpp  GCodeWriter.hpp  MaterialType.cpp  MeshBoolean.cpp  Model.cpp  Preset.cpp  Preset.hpp  PresetBundle.cpp  PresetBundle.hpp  Print.cpp  Print.hpp  PrintApply.cpp  PrintConfig.cpp  PrintConfig.hpp  PrintObject.cpp  PrintObjectSlice.cpp  Slicing.cpp  Time.cpp  Time.hpp  TriangleMeshDeal.cpp  TriangleSelector.cpp  Utils.hpp  calib.hpp  utils.cpp
src/slic3r/: CMakeLists.txt
tests/libslic3r/: test_bambu_networking.cpp
(+1434 files in other folders)
